# Evraz_Hackathon_CyberSnake

./: .env  XGBoost Prediction.py  active_diffs_timestamp.csv  alembic.ini  pyproject.toml  submission.csv
alembic/versions/: 953ac7fd2de2_add_root_migration.py
app/: main.py
app/controllers/: base_repository.py  exhauster_repository.py
app/entrypoint/: config.py  create_app.py  create_middleware.py  database.py  init_logger.py  setup_router_and_exceptions.py
app/entrypoint/helpers/: __init__.py  base_exceptions.py  base_response.py  use_route_names_as_operation_ids.py
app/models/: base_models.py
app/models/exhauster/: __init__.py  bearing_with_vibration_sensor.py  bearing_without_vibration_sensor.py  exhauster.py  exsgauter_metadata.py  gas_manifold.py  main_drive.py  oil_system.py  refrigerant.py  sensor.py  valve_position.py
app/schema/: base_schema_model.py
app/schema/exhauster/: __init__.py  bearing_with_vibration_sensor.py  bearing_without_vibration_sensor.py  exhauster.py  exhauster_with_bearings.py  exsgauter_metadata.py  gas_manifold.py  main_drive.py  oil_system.py  refrigerant.py  sensor.py  valve_position.py
app/services/: kafka_consumer_service.py
app/views/: exhauster.py  root_router.py
app/views/helpers/: base_exceptions.py
fonts/: stylesheet.css  stylesheet.css.bak
hacaton/hakaton_evraz-master/: package-lock.json  package.json
hacaton/hakaton_evraz-master/public/: index.html
hacaton/hakaton_evraz-master/src/: index.js
src/: index.css
src/apis/: server.js
src/components/App/: index.jsx
tests/: test_sevple.py
(+28 files in other folders)
