[tool.poetry]
name = "snakeevraz"
version = "0.1.0"
description = ""
authors = ["ZakharchevAA <zakharchevAA@pgk.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
kafka-python = "^2.0.2"
orjson = "^3.8.6"
pydantic = {extras = ["dotenv"], version = "^1.10.5"}
fastapi = "^0.92.0"
SQLAlchemy = "1.4.46"
python-json-logger = "^2.0.6"
uvicorn = "^0.20.0"
pip = "23.0.1"
fastapi-utils = "^0.2.1"
alembic = "1.8.1"
psycopg2-binary = "^2.9.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
